Thu Jan 20 07:41:04 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tests/GIOP_Fragments/Java_Big_Request/Payload_Receiver.cpp:
        * tests/GIOP_Fragments/PMB_With_Fragments/Payload_Receiver.cpp:

          Supply the ACE_ENV_... to ORB::shutdown() to support non-native
          exception builds.

        * tests/GIOP_Fragments/Java_Big_Request/server.cpp:
        * tests/GIOP_Fragments/PMB_With_Fragments/server.cpp:

          Added #include "ace/OS_NS_stdio.h" to avoid build problems with
          inline=0.

Thu Jan 20 06:57:40 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Property/client.cpp:
        * performance-tests/Callback/client.cpp:
        * performance-tests/Latency/AMI/client.cpp:
        * performance-tests/RTCorba/Multiple_Endpoints/Orb_Per_Priority/client.cpp:
        * performance-tests/RTCorba/Multiple_Endpoints/Single_Endpoint/client.cpp:
        * tests/MT_BiDir/client.cpp:
        * tests/Portable_Interceptors/Benchmark/client.cpp:
        * tests/Smart_Proxies/Benchmark/client.cpp:

          Changed debug messages from printing "server" to "client".

Thu Jan 20 00:47:58 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * tests/Collocation_Tests/Hello.cpp (get_string):

          Fixed syntax error caused by renaming of TAO_ORB_Table class to
          TAO::ORB_Table (see below).  Note that TAO::ORB_Table is only
          meant to be used internally by TAO.

Wed Jan 19 11:44:48 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tests/GIOP_Fragments/Java_Big_Reply/Client_Task.h:
        * tests/GIOP_Fragments/Java_Big_Reply/Java_Big_Reply.mpc:
        * tests/GIOP_Fragments/Java_Big_Request/Java_Big_Request.mpc:
        * tests/GIOP_Fragments/Java_Big_Request/Payload_Receiver.h:
        * tests/GIOP_Fragments/PMB_With_Fragments/PMB_With_Fragments.mpc:
        * tests/GIOP_Fragments/PMB_With_Fragments/Payload_Receiver.h:

          Got rid of fuzz errors.
