@@ -1,3 +1,10 @@
+Thu Jan 20 07:53:44 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * orbsvcs/examples/ImR/Combined_Service/run_test.pl:
+
+          Attempt to ensure that no processes are left running when the
+          script completes.
+
 Thu Jan 20 07:41:04 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * tests/GIOP_Fragments/Java_Big_Request/Payload_Receiver.cpp:
